<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10" >

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theFarm" />

        <TextView
            style="@style/headText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhatTypeOfAnimalWillYouBe" />
    </LinearLayout>

    <LinearLayout
         android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="40"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/scoreband_75"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/scoreband_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cow"
                android:contentDescription="@string/image" />

            <TextView
                style="@style/mudText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/scoreband_75" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreband_50"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/scoreband_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/dog"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/image" />

            <TextView
                style="@style/mudText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/scoreband_50" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreband_25"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/scoreband_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/rooster"
                android:contentDescription="@string/image" />

            <TextView
                style="@style/mudText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/scoreband_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreband_0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/scoreband_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sheep"
                android:contentDescription="@string/image" />

            <TextView
                style="@style/mudText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/scoreband_0" />
        </LinearLayout>
    </LinearLayout>

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="15" >
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                style="@style/mudText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howManyQuestions"
                 />

            <TextView
                android:id="@+id/seletion_tvQuestionsSelectedCount"
                style="@style/mudText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/howManyQuestionsDefaultNumber" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seletion_sbHowManyQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:layout_margin="3dp"/>
        
       
        <Button
            android:id="@+id/selection_btnStart"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_orange"
            android:text="@string/start" />
        

        
    </LinearLayout>

</LinearLayout>