<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical" >

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/resultCircleThisTime"
                style="@style/resultCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/reward_circle"
                android:gravity="center"/>

            <TextView
                android:id="@+id/resultCircleRewardGoal"
                style="@style/resultCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/reward_circle"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/mudTextSmaller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pointsScoredThisVisit" />

            <TextView
                style="@style/mudTextSmaller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pointsTotal" />
        </LinearLayout>

        <View
            style="@style/hr"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/results_resultAnimalIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/cow"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/results_MessageTV"
                style="@style/mudText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center" />
        </LinearLayout>

        <View
            style="@style/hr"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp" />



        <ListView
            android:id="@+id/results_resultsLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:listSelector="@android:color/transparent" >
        </ListView>
    </LinearLayout>

</LinearLayout>